--- a/home.html
+++ b/home.html
@@ -4,21 +4,65 @@
 	<meta http-equiv="content-type" content="text/html; charset=utf-8" />
     <meta name="viewport" content="width=device-width, maximum-scale=1, target-densityDPI=device-dpi"/>
 	<title>Surfhouse</title>
+	<link rel="stylesheet" href="css/reset.css">
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="stylesheet" href="css/variables.css">
 	<link rel="stylesheet" href="css/responsive-slider.css"  media="screen">
 	<link href="https://fonts.googleapis.com/css?family=Raleway:300,400,600,700,800,900|Roboto:400,700,900,900i" rel="stylesheet">
 </head>
 <body>
-	<div class="top-wrap">
+	<div class="top-wrapper">
+	    <!-- begin header -->
 		<header>
 			<div class="logo">
 				<img src="img/logo-pic.png" alt="surfhouse-logotype">
 			</div>
-			<div class="sprite"></div>
+			<div class="social-icon">
+				<a href="#" class="social__fb"><i></i>Facebook</a>
+				<a href="#" class="social__tw"><i></i>Twitter</a>
+				<a href="#" class="social__yt"><i></i>YouTube</a>
+				<a href="#" class="social__pin"><i></i>Pinterest</a>
+				<a href="#" class="social__ins"><i></i></a>
+				<select name="languege">
+					<option value="English">EN</option>
+					<option value="Ukrainian">UA</option>
+					<option value="Russian">RUS</option>
+				</select>
+			</div>
 		</header>
-		<div class="top-wrap_center">
-			<div class="card"></div>
+		<!-- Rend header -->
+		<div class="top-wrapper_center">
+			<!-- begin card__block -->
+			<div class="cart__block">
+				<!-- begin user__bascket -->
+				<div class="user__basket">
+					<div class="login">
+						<a href="#">Login</a>
+						<a href="#">Wish list(o)</a>
+					</div>
+					<div class="cart">
+						<p class="cash__cart"><i>$</i>1,459.50</p>
+						<p class="amount__items">2 items</p>
+						<a href="#" class="delete__cart"><i></i>delete__cart</a>
+						<a href="#" class="edit__cart">edit__cart</a>
+					</div>
+					<div class="cart__info">
+						<a href="#">view cart</a>
+						<a href="#">checkout</a>
+					</div>
+					<form class="search__cart">
+						<input type="search" name="cartsearch" placeholder="search">
+						<button type="submit"></button>
+					</form>
+				</div>
+				<!-- end user__bascket -->
+				<div class="box__welcome">
+					<h2>welcome to surfhouse</h2>
+					<p>The only online store you will ever need for all your
+					windsurfing and kitesurfing and SUP needs</p>
+				</div>
+			</div>
+			<!-- end card__block -->
 
 			<!-- RESPONSIVE SLIDER - START -->
 			<div class="responsive-slider" data-spy="responsive-slider" data-autoplay="true" data-interval="5000" data-transitiontime="300">
@@ -26,22 +70,22 @@
 			    <ul>
 			      <li>
 			        <div class="slide-body" data-group="slide">
-			          <h1></h1>
-			          <p></p>
+			          <h1>JP Funride 2014</h1>
+			          <p>Super easy going freeride boards based on the X-Cite Ride shape concept with additional control and super easy jibing. </p>
 			          <button>BUY</button>
 			        </div>
 			      </li>
 			      <li>
 			        <div class="slide-body" data-group="slide">
-			          <h1></h1>
-			          <p></p>
+			          <h1>JP Funride 2014</h1>
+			          <p>Super easy going freeride boards based on the X-Cite Ride shape concept with additional control and super easy jibing. </p>
 			          <button>BUY</button>
 			        </div>
 			      </li>
 			      <li>
 			        <div class="slide-body" data-group="slide">
-			          <h1></h1>
-			          <p></p>
+			          <h1>JP Funride 2014</h1>
+			          <p>Super easy going freeride boards based on the X-Cite Ride shape concept with additional control and super easy jibing. </p>
 			          <button>BUY</button>
 			        </div>
 			      </li>
