--- a/home.html
+++ b/home.html
@@ -18,11 +18,11 @@
 				<img src="img/logo-pic.png" alt="surfhouse-logotype">
 			</div>
 			<div class="social-icon">
-				<a href="#" class="social__fb"><i></i>Facebook</a>
+				<a href="#" class="social__fb text-hide"><i></i>Facebook</a>
 				<a href="#" class="social__tw"><i></i>Twitter</a>
 				<a href="#" class="social__yt"><i></i>YouTube</a>
 				<a href="#" class="social__pin"><i></i>Pinterest</a>
-				<a href="#" class="social__ins"><i></i></a>
+				<a href="#" class="social__ins"><i></i>Instagram</a>
 				<select name="languege">
 					<option value="English">EN</option>
 					<option value="Ukrainian">UA</option>
@@ -41,10 +41,13 @@
 						<a href="#">Wish list(o)</a>
 					</div>
 					<div class="cart">
+						<img src="img/basket-icon.png" alt="basket-icon">
 						<p class="cash__cart"><i>$</i>1,459.50</p>
 						<p class="amount__items">2 items</p>
-						<a href="#" class="delete__cart"><i></i>delete__cart</a>
-						<a href="#" class="edit__cart">edit__cart</a>
+						<div class="cart__control">
+							<a href="#" class="delete__cart"><i></i>delete__cart</a>
+							<a href="#" class="edit__cart">edit__cart</a>
+						</div>
 					</div>
 					<div class="cart__info">
 						<a href="#">view cart</a>
