--- a/home.html
+++ b/home.html
@@ -1,110 +1,129 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta http-equiv="content-type" content="text/html; charset=utf-8" />
+    <meta http-equiv="content-type" content="text/html; charset=utf-8" />
     <meta name="viewport" content="width=device-width, maximum-scale=1, target-densityDPI=device-dpi"/>
-	<title>Surfhouse</title>
-	<link rel="stylesheet" href="css/reset.css">
-	<link rel="stylesheet" href="css/style.css">
-	<link rel="stylesheet" href="css/variables.css">
-	<link rel="stylesheet" href="css/responsive-slider.css"  media="screen">
-	<link href="https://fonts.googleapis.com/css?family=Raleway:300,400,600,700,800,900|Roboto:400,700,900,900i" rel="stylesheet">
+    <title>Surfhouse</title>
+    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/variables.css">
+    <!--<link rel="stylesheet" href="css/responsive-slider.css"  media="screen">-->
+    <link href="https://fonts.googleapis.com/css?family=Raleway:300,400,600,700,800,900|Roboto:400,700,900,900i" rel="stylesheet">
 </head>
 <body>
-	<div class="top-wrapper">
-	    <!-- begin header -->
-		<header>
-			<div class="logo">
-				<img src="img/logo-pic.png" alt="surfhouse-logotype">
-			</div>
-			<div class="social-icon">
-				<a href="#" class="social__fb text-hide"><i></i>Facebook</a>
-				<a href="#" class="social__tw"><i></i>Twitter</a>
-				<a href="#" class="social__yt"><i></i>YouTube</a>
-				<a href="#" class="social__pin"><i></i>Pinterest</a>
-				<a href="#" class="social__ins"><i></i>Instagram</a>
-				<select name="languege">
-					<option value="English">EN</option>
-					<option value="Ukrainian">UA</option>
-					<option value="Russian">RUS</option>
-				</select>
-			</div>
-		</header>
-		<!-- Rend header -->
-		<div class="top-wrapper_center">
-			<!-- begin card__block -->
-			<div class="cart__block">
-				<!-- begin user__bascket -->
-				<div class="user__basket">
-					<div class="login">
-						<a href="#">Login</a>
-						<a href="#">Wish list(o)</a>
-					</div>
-					<div class="cart">
-						<img src="img/basket-icon.png" alt="basket-icon">
-						<p class="cash__cart"><i>$</i>1,459.50</p>
-						<p class="amount__items">2 items</p>
-						<div class="cart__control">
-							<a href="#" class="delete__cart"><i></i>delete__cart</a>
-							<a href="#" class="edit__cart">edit__cart</a>
-						</div>
-					</div>
-					<div class="cart__info">
-						<a href="#">view cart</a>
-						<a href="#">checkout</a>
-					</div>
-					<form class="search__cart">
-						<input type="search" name="cartsearch" placeholder="search">
-						<button type="submit"></button>
-					</form>
-				</div>
-				<!-- end user__bascket -->
-				<div class="box__welcome">
-					<h2>welcome to surfhouse</h2>
-					<p>The only online store you will ever need for all your
-					windsurfing and kitesurfing and SUP needs</p>
-				</div>
-			</div>
-			<!-- end card__block -->
+    <div class="top-wrapper">
+        <!-- begin header -->
+        <header>
+            <a href="#" class="logo"> 
+                <img src="img/logo-pic.png" alt="surfhouse-logotype">
+            </a>
+            <div class="social-icon">
+                <a href="#" class="social__fb .text-hide"><i></i>Facebook</a>
+                <a href="#" class="social__tw"><i></i>Twitter</a>
+                <a href="#" class="social__yt"><i></i>YouTube</a>
+                <a href="#" class="social__pin"><i></i>Pinterest</a>
+                <a href="#" class="social__ins"><i></i>Instagram</a>
+                <select name="languege">
+                    <option value="English">EN</option>
+                    <option value="Ukrainian">UA</option>
+                    <option value="Russian">RU</option>
+                </select>
+            </div>
+        </header>
+        <!-- Rend header -->
+        <div class="top-wrapper_center">
+            <!-- begin card__block -->
+            <div class="cart__block">
+                <!-- begin user__bascket -->
+                <div class="user__basket">
+                    <div class="login">
+                        <a href="#">Login</a>
+                        <a href="#">Wish list(o)</a>
+                    </div>
+                    <div class="cart">
+                        <img src="img/basket-icon.png" alt="basket-icon">
+                        <div class="cash__block">
+                            <p class="cash__cart"><i>$</i>1,459.50</p>
+                            <p class="amount__items">2 items</p>
+                        </div>
+                        <div class="cart__control">
+                            <a href="#" class="delete__cart"><i></i></a>
+                            <a href="#" class="edit__cart">edit</a>
+                        </div>
+                    </div>
+                    <div class="cart__info">
+                        <a href="#" class="view__cart">view cart</a>
+                        <a href="#" class="checkout">checkout</a>
+                    </div>
+                    <form class="search__cart">
+                        <input type="search" class="search" name="cartsearch" placeholder="search">
+                        <button type="submit"></button>
+                    </form>
+                </div>
+                <!-- end user__bascket -->
+                <!-- start box__welcome -->
+                <div class="box__welcome">
+                    <h2>welcome to surfhouse</h2>
+                    <p>The only online store you will ever need for all your
+                    windsurfing and kitesurfing and SUP needs</p>
+                </div>
+            </div>
+            <!-- end box__welcome -->
+            <!-- end card__block -->
+            <!-- begin container -->
+            <div class="container">
+                <div class="slider__content-wrapper">
+                    <h1>JP Funride</br> 2014</h1>
+                    <p>Super easy going freeride boards based on the X-Cite Ride shape con-</br>cept with additional control and super easy jibing. </p>
+                    <button>BUY NOW</button>
+                </div>                
+            </div>
+            <!-- end container -->
 
-			<!-- RESPONSIVE SLIDER - START -->
-			<div class="responsive-slider" data-spy="responsive-slider" data-autoplay="true" data-interval="5000" data-transitiontime="300">
-			  <div class="slides" data-group="slides">
-			    <ul>
-			      <li>
-			        <div class="slide-body" data-group="slide">
-			          <h1>JP Funride 2014</h1>
-			          <p>Super easy going freeride boards based on the X-Cite Ride shape concept with additional control and super easy jibing. </p>
-			          <button>BUY</button>
-			        </div>
-			      </li>
-			      <li>
-			        <div class="slide-body" data-group="slide">
-			          <h1>JP Funride 2014</h1>
-			          <p>Super easy going freeride boards based on the X-Cite Ride shape concept with additional control and super easy jibing. </p>
-			          <button>BUY</button>
-			        </div>
-			      </li>
-			      <li>
-			        <div class="slide-body" data-group="slide">
-			          <h1>JP Funride 2014</h1>
-			          <p>Super easy going freeride boards based on the X-Cite Ride shape concept with additional control and super easy jibing. </p>
-			          <button>BUY</button>
-			        </div>
-			      </li>
-			    </ul>
-			  </div>
-			  <a class="slider-control left" href="#" data-jump="prev"><i class="icon-angle-left"></i></a>
-			  <a class="slider-control right" href="#" data-jump="next"><i class="icon-angle-right"></i></a>
-			  <div class="pages">
-			    <a class="page" href="#" data-jump-to="1">1</a>
-			    <a class="page" href="#" data-jump-to="2">2</a>
-			    <a class="page" href="#" data-jump-to="3">3</a>
-			  </div>
-			</div>
-			<!-- RESPONSIVE SLIDER - END -->
-		</div>
-	</div>
+            <!-- RESPONSIVE SLIDER - START 
+            <div class="responsive-slider" data-spy="responsive-slider" data-autoplay="true" data-interval="5000" data-transitiontime="300">
+              <div class="slides" data-group="slides">
+                <ul>
+                  <li>
+                    <div class="slide-body" data-group="slide">
+                        <div class="slider__content-wrapper">
+                            <h1>JP Funride</br> 2014</h1>
+                            <p>Super easy going freeride boards based on the X-Cite Ride shape concept with additional control and super easy jibing. </p>
+                            <button>BUY NOW</button>
+                        </div>
+                    </div>
+                  </li>
+                  <li>
+                    <div class="slide-body" data-group="slide">
+                        <div class="slider__content-wrapper">
+                            <h1>JP Funride</br> 2014</h1>
+                            <p>Super easy going freeride boards based on the X-Cite Ride shape concept with additional control and super easy jibing. </p>
+                            <button>BUY NOW</button>
+                        </div>
+                     </div>
+                  </li>
+                  <li>
+                    <div class="slide-body" data-group="slide">
+                        <div class="slider__content-wrapper">
+                            <h1>JP Funride</br> 2014</h1>
+                            <p>Super easy going freeride boards based on the X-Cite Ride shape concept with additional control and super easy jibing. </p>
+                            <button>BUY NOW</button>
+                        </div>
+                    </div>
+                  </li>
+                </ul>
+              </div>
+              <a class="slider-control left" href="#" data-jump="prev"><i class="icon-angle-left"></i></a>
+              <a class="slider-control right" href="#" data-jump="next"><i class="icon-angle-right"></i></a>
+              <div class="pages">
+                <a class="page" href="#" data-jump-to="1">1</a>
+                <a class="page" href="#" data-jump-to="2">2</a>
+                <a class="page" href="#" data-jump-to="3">3</a>
+              </div>
+            </div>
+            -- RESPONSIVE SLIDER - END -->
+        </div>
+    </div>
 
 <script src="js/jquery.js"></script>
 <script src="js/jquery.event.move.js"></script>
@@ -113,11 +132,11 @@
 <script>
   $( document ).ready( function() {
     $('.responsive-slider').responsiveSlider({
-      autoplay: true,
+      autoplay: false,
       interval: 5000,
       transitionTime: 300
     });
   });
-</script>	
+</script>   
 </body>
 </html>
