--- a/home.html
+++ b/home.html
@@ -18,11 +18,11 @@
                 <img src="img/logo-pic.png" alt="surfhouse-logotype">
             </a>
             <div class="social-icon">
-                <a href="#" class="social__fb .text-hide"><i></i>Facebook</a>
-                <a href="#" class="social__tw"><i></i>Twitter</a>
-                <a href="#" class="social__yt"><i></i>YouTube</a>
-                <a href="#" class="social__pin"><i></i>Pinterest</a>
-                <a href="#" class="social__ins"><i></i>Instagram</a>
+                <a href="#" class="social__fb .text-hide wobble-vertical"><i></i>Facebook</a>
+                <a href="#" class="social__tw wobble-vertical"><i></i>Twitter</a>
+                <a href="#" class="social__yt wobble-vertical"><i></i>YouTube</a>
+                <a href="#" class="social__pin wobble-vertical"><i></i>Pinterest</a>
+                <a href="#" class="social__ins wobble-vertical"><i></i>Instagram</a>
                 <select name="languege">
                     <option value="English">EN</option>
                     <option value="Ukrainian">UA</option>
@@ -65,7 +65,7 @@
                 <div class="box__welcome">
                     <h2>welcome to surfhouse</h2>
                     <p>The only online store you will ever need for all your
-                    windsurfing and kitesurfing and SUP needs</p>
+                    windsurfing and kitesurf-</br>ing and SUP needs</p>
                 </div>
             </div>
             <!-- end box__welcome -->
