--- a/home.html
+++ b/home.html
@@ -91,17 +91,17 @@
 				<!-- begin navigation -->
 				<nav class="vertical">	
 					<h2>MENU</h2>
-				    <ul>
+				    <ul class="first-level">
 					    <li><a href="#">About</a></li>
 					    <li><a href="#">apparel</a></li>
 					    <li><a href="#">surf apparel</a></li>
 					    <li><a href="#">windsurf </a>
-					    	<ul>
+					    	<ul class="second-level">
 						    	<li><a href="#">kites</a></li>
 						    	<li><a href="#">kiteboards</a></li>
 						    	<li>
 						    		<a href="#">bags</a>
-						    		<ul>
+						    		<ul class="third-level">
 							  			<li><a href="#">MAGIC Kit</a></li>
 							  			<li><a href="#">Pro limit s0214</a></li>
 						    		</ul>
@@ -136,7 +136,7 @@
 				<!-- end articles_block -->
 			</aside>
 			<!-- end aside -->            
-			<div class="content"></div>
+			<div class="products"></div>
 			<div class="bottom__content"></div>
 		</div>
 		<!-- end main content -->
