--- a/home.html
+++ b/home.html
@@ -121,12 +121,33 @@
 				<!-- end navigation -->
 				<!-- begin banner__block -->
 				<div class="banner__block">
-					
+					<span>Now</br> is</br> open!</span>
 				</div>
 				<!-- end banner__block -->
 				<!-- begin tags_block -->
-				<div class="tags_block">
-					
+				<div class="tags__block">
+					<h2>Tags Widget</h2>
+					<div class="tags__inner">
+						<a href="#" class="active">Kitesurf</a>
+						<a href="#">Super</a></br>
+						<a href="#">Duper</a>
+						<a href="#">Theme</a></br>
+						<a href="#">Men</a>
+						<a href="#">Woman</a>
+						<a href="#">Equipment</a></br>
+						<a href="#">Best</a>
+						<a href="#">Accessories</a>
+						<a href="#">Men</a></br>
+						<a href="#">Apparel</a>
+						<a href="#">Super</a></br>
+						<a href="#">Dupel</a>
+						<a href="#">Theme</a>
+						<a href="#">Responsiv</a></br>
+						<a href="#">Men</a>
+						<a href="#">Women</a>
+						<a href="#">Equipment</a>					
+					</div>
+					<a href="#">view all tags<i></i></a>
 				</div>
 				<!-- end tags_block -->
 				<!-- begin articles_block -->
