--- a/home.html
+++ b/home.html
@@ -681,7 +681,7 @@
 				<!-- end brand__block -->
 				<!-- begin instagram__widget -->
 				<div class="instagram__widget">
-					<h2><a href="#"><i></i>Instagram feed: <span>#surfhouse</span></a></h2>
+					<h2><a href="#">iInstagram feed: <span>#surfhouse</span></a></h2>
 					<ul class="gallery clearfix">
 						<li><a href="img/fullscreen/1.JPG?lol=lol" rel="prettyPhoto[gallery1]" title="You can add caption to pictures. You can add caption to pictures. You can add caption to pictures."><img src="img/thumbnails/t_1.png" width="170" height="170" alt="Red round shape" /></a></li>
 						<li><a href="img/fullscreen/2.jpg" rel="prettyPhoto[gallery1]"><img src="img/thumbnails/t_2.png" width="170" height="170" alt="Nice building" /></a></li>
@@ -704,6 +704,81 @@
 		</div>
 		<!-- end main content -->
 	</div>
+	<!-- begin footer__wrapper -->
+	<div class="footer__wrapper">
+		<footer>
+			<!-- begin Category -->
+			<div class="Category">
+				<h2>Category</h2>
+				<a href="#">Home</a>
+				<a href="#">about us</a>
+				<a href="#">eshop</a>
+				<a href="#">Features</a>
+				<a href="#">new collections</a>
+				<a href="#">blog</a>
+				<a href="#">contact</a>
+			</div>
+			<!-- end Category -->
+			<!-- begin Our Account -->
+			<div class="Our Account">
+				<h2>Our Account</h2>
+				<a href="#">Your Account</a>
+				<a href="#">Personal information</a>
+				<a href="#">Addresses</a>
+				<a href="#">Discount</a>
+				<a href="#">Orders history</a>
+				<a href="#">Addresses</a>
+				<a href="#">Search Terms</a>	
+			</div>
+			<!-- end Our Account -->
+			<!-- begin Our Support -->
+			<div class="Our Support">
+				<h2>Our Support</h2>
+				<a href="#">Site Map</a>
+				<a href="#">Search Terms</a>
+				<a href="#">Advanced Search</a>
+				<a href="#">Mobile</a>
+				<a href="#">Contact Us</a>
+				<a href="#">Mobile</a>
+				<a href="#">Addresses</a>
+			</div>
+			<!-- end Our Support -->
+			<!-- begin Newsletter -->
+			<div class="Newsletter">
+				<h2>Newsletter</h2>
+				<p>Join thousands of other people subscribe to our news</p>
+				<form>
+					<input type="email" class="email" name="news_email" placeholder="insert email">
+					<button type="submit">submit</button>
+				</form>
+				<!-- begin ccard_icons -->
+				<div class="ccard_icons">
+					<img src="#" alt="american-express">
+					<img src="#" alt="master-card">
+					<img src="#" alt="maestro">
+					<img src="#" alt="paypal">
+					<img src="#" alt="discover">
+					<img src="#" alt="visa">
+				</div>
+				<!-- end ccard_icons -->
+			</div>
+			<!-- end Newsletter -->
+			<!-- begin about__us -->
+			<div class="about__us">
+				<h2>about us</h2>
+				<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. </p>
+				<p class="phone"><span>Phone:</span>1-999-342-9876</p>
+				<p class="contact_email">e-mail:<a href="mailto:info@surfhouse.com">info@surfhouse.com</p>
+			</div>
+			<!-- end about__us -->
+		</footer>
+		<!-- begin copyright-wrap -->
+		<div class="copyright-wrap">
+			<p>2014  SURFHOUSE. All rights reserved - Designed by theuncreativelab.com</p>
+		</div>
+		<!-- end copyright-wrap -->
+	</div>
+	<!-- end footer__wrapper -->
   
 <script>
 $(document).ready(function(){
