--- a/home.html
+++ b/home.html
@@ -43,7 +43,7 @@
 				</select>
 			</div>
 		</header>
-		<!-- Rend header -->
+		<!-- end header -->
 		<div class="top-wrapper_center">
 			<!-- begin card__block -->
 			<div class="cart__block">
@@ -115,6 +115,46 @@
 		</div>
 	</div>
 	<div class="main-wrap">
+		<!-- begin mobile navigation -->
+		<div class="mobile__navigation">
+			<div class="menu-button">Menu</div>
+		    <ul class="flexnav" data-breakpoint="800">
+			    <li><a href="#">About</a></li>
+			    <li><a href="#">apparel</a></li>
+			    <li><a href="#">surf apparel</a></li>
+			    <li><a href="#">windsurf </a>
+			    	<ul class="second-level">
+				    	<li><a href="#">kites</a></li>
+				    	<li><a href="#">kiteboards</a></li>
+				    	<li>
+				    		<a href="#">bags</a>
+				    		<ul class="third-level">
+					  			<li><a href="#">MAGIC Kit</a></li>
+					  			<li><a href="#">Pro limit s0214</a></li>
+				    		</ul>
+				    	</li>
+				    	<li><a href="#">equipment</a></li>
+			    	</ul>
+			    </li>
+			    <li><a href="#">kitesurf</a></li>
+			    <li><a href="#">accessories</a></li>
+			    <li><a href="#">sale </a></li>
+			    <li><a href="#">brands</a>
+					<ul class="second-level">
+			    		<li><a href="#">Nike</a></li>
+		    			<li><a href="#">Adidas</a></li>
+		    			<li><a href="#">Puma</a></li>
+		    			<li><a href="#">Cat</a></li>
+		    			<li><a href="#">Outwear</a></li>
+			    	</ul>
+			    </li>
+			    <li><a href="#">blog</a></li>
+			    <li><a href="#">Gadgets</a></li>
+			    <li><a href="#">cantact</a></li>
+		    </ul>
+		</div>
+		<!-- end mobile navigation -->
+
 		<!-- begin main content -->        
 		<div class="main clearfix">
 		   <!-- begin aside --> 
@@ -143,7 +183,15 @@
 					    <li><a href="#">kitesurf</a></li>
 					    <li><a href="#">accessories</a></li>
 					    <li><a href="#">sale </a></li>
-					    <li><a href="#">brands</a></li>
+					    <li><a href="#">brands</a>
+					    	<ul class="second-level">
+					    		<li><a href="#">Nike</a></li>
+				    			<li><a href="#">Adidas</a></li>
+				    			<li><a href="#">Puma</a></li>
+				    			<li><a href="#">Cat</a></li>
+				    			<li><a href="#">Outwear</a></li>
+					    	</ul>
+					    </li>
 					    <li><a href="#">blog</a></li>
 					    <li><a href="#">Gadgets</a></li>
 					    <li><a href="#">cantact</a></li>
@@ -151,37 +199,7 @@
 				</nav>
 				<!-- end navigation -->
 
-				<!-- begin mobile navigation -->
-				<div class="mobile__navigation">
-					<div class="menu-button">Menu</div>
-				    <ul class="flexnav" data-breakpoint="800">
-					    <li><a href="#">About</a></li>
-					    <li><a href="#">apparel</a></li>
-					    <li><a href="#">surf apparel</a></li>
-					    <li><a href="#">windsurf </a>
-					    	<ul class="second-level">
-						    	<li><a href="#">kites</a></li>
-						    	<li><a href="#">kiteboards</a></li>
-						    	<li>
-						    		<a href="#">bags</a>
-						    		<ul class="third-level">
-							  			<li><a href="#">MAGIC Kit</a></li>
-							  			<li><a href="#">Pro limit s0214</a></li>
-						    		</ul>
-						    	</li>
-						    	<li><a href="#">equipment</a></li>
-					    	</ul>
-					    </li>
-					    <li><a href="#">kitesurf</a></li>
-					    <li><a href="#">accessories</a></li>
-					    <li><a href="#">sale </a></li>
-					    <li><a href="#">brands</a></li>
-					    <li><a href="#">blog</a></li>
-					    <li><a href="#">Gadgets</a></li>
-					    <li><a href="#">cantact</a></li>
-				    </ul>
-				</div>
-				<!-- end mobile navigation -->
+				
 				<!-- begin banner__block -->
 				<div class="banner__block">
 					<span>Now</br> is</br> open!</span>
@@ -751,8 +769,8 @@ $(document).ready(function() {
 $(document).ready(function(){
   $('.slider4').bxSlider({
     slideWidth: 270,
-    minSlides: 2,
-    maxSlides: 6,
+    minSlides: 1,
+    maxSlides: 3,
     moveSlides: 1,
     slideMargin: 30
   });
@@ -762,7 +780,7 @@ $(document).ready(function(){
 $(document).ready(function(){
   $('.slider5').bxSlider({
     slideWidth: 270,
-    minSlides: 2,
+    minSlides: 1,
     maxSlides: 3,
     moveSlides: 1,
     slideMargin: 30
