--- a/home.html
+++ b/home.html
@@ -150,7 +150,7 @@
 			    </li>
 			    <li><a href="#">blog</a></li>
 			    <li><a href="#">Gadgets</a></li>
-			    <li><a href="#">cantact</a></li>
+			    <li><a href="contact.html">cantact</a></li>
 		    </ul>
 		</div>
 		<!-- end mobile navigation -->
@@ -194,7 +194,7 @@
 					    </li>
 					    <li><a href="#">blog</a></li>
 					    <li><a href="#">Gadgets</a></li>
-					    <li><a href="#">cantact</a></li>
+					    <li><a href="contact.html">cantact</a></li>
 				    </ul>
 				</nav>
 				<!-- end navigation -->
