--- a/contact.html
+++ b/contact.html
@@ -6,13 +6,14 @@
 	<title>Surfhouse</title>
 	<link rel="stylesheet" href="css/reset.css">
 	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="css/contact.css">
 	<link rel="stylesheet" href="css/variables.css">
 	<link rel="stylesheet" href="css/prettyPhoto.css" type="text/css" media="screen" title="prettyPhoto main stylesheet" charset="utf-8" />	
 	<!-- Owl carousel CSS file -->
 	<link rel="stylesheet" href="css/owl.carousel.css">
 	<link rel="stylesheet" href="css/owl.theme.css">
 	<!--       CSS file -->
-<link href="css/flexnav.css" rel="stylesheet" type="text/css" />
+	<link href="css/flexnav.css" rel="stylesheet" type="text/css" />
 	<!-- bxSlider CSS file -->
 	<link href="css/jquery.bxslider.css" rel="stylesheet" />
 	<!-- jQuery library -->
@@ -23,7 +24,7 @@
 	<script src="js/jquery.prettyPhoto.js" type="text/javascript" charset="utf-8"></script>
 	<link href="https://fonts.googleapis.com/css?family=Raleway:300,400,600,700,800,900|Roboto:400,700,900,900i" rel="stylesheet">
 </head>
-<body>
+<body class="contact__page">
 	<div class="top-wrapper">
 		<!-- begin header -->
 		<header>
@@ -140,22 +141,23 @@
 			<div class="contacts__block">
 				<!-- begin breadcrubms -->
 				<div class="breadcrubms">
-					   <a href="home.html">Home</a> / Contact US
-					   <a href="home.html">Back to previous page</a>
+					   <a href="home.html">Home &raquo;</a> 
+					   <a href="#" class="active"> Contact US </a>
+					   <a href="home.html">&laquo; Back to previous page</a>
 				</div>
 				<!-- end breadcrubms -->
 				<!-- begin form__block -->
 				<div class="form__block">
-					<form action="">
-						<label for=""></label>
-						<input type="text"	required="required">
-						<label for=""></label>
-						<input type="email"	required="required">
-						<label for=""></label>
-						<input type="text">
-						<label for=""></label>
-						<input type="text"	required="required">
-						<label for=""></label>
+					<form action="#">
+						<label>Full name*</label>
+						<input type="text"	name="name" placeholder="e.g.  robert smith" required="required">
+						<label>Email*</label>
+						<input type="email" placeholder="e.g. name@nome.com" required="required">
+						<label>company</label>
+						<input type="text" placeholder="e.g. your company (optional)">
+						<label>subject*</label>
+						<input type="text" placeholder="e.g. info" 	required="required">
+						<label>message</label>
 						<textarea name="" id="" cols="30" rows="10"></textarea>
 					</form>
 				</div>
@@ -163,11 +165,11 @@
 				<!-- begin adress__block -->
 				<div class="adress__block">
 					<h2>Address</h2>
-					<p><i></i>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. </p> 
-					<p>Sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. </p>
+					<p><i></i><span>Ut interdum tristique est com</br>modo pharetra.</span></p>
+					<p>Lorem Ipsum is simply dummy </br>text of the printing and over</p>
 					<p class="phone"><i></i>1-999-342-9876</p>
 					<p class="contact_email"><i></i><a href="mailto:info@surfhouse.com">info@surfhouse.com</a></p>
-					<p>Sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. </p>
+					<p>If you have questions about your order or need any general information our customer service team will be happy to assist you.</p>
 				</div>
 				<!-- end adress__block -->
 				<!-- begin brand__block -->
